deploy/kubernetes/base/service.yaml
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "name": "dali"
  },
  "spec": {
    "type": "ClusterIP",
    "selector": {
      "app": "dali"
    },
    "ports": [
      {
        "name": "http",
        "port": 8080,
        "targetPort": "http"
      }
    ]
  }
}
